<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#000000" >

    
    <EditText 
        android:id="@+id/etResult"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:hint=""
        android:ems="10"
      
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <Button
                android:id="@+id/btn_clear"
                android:layout_height="60sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                
                android:text="@string/btn_clear" />

            <Button
                android:id="@+id/btn_back"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_back" 
               
                 
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_chu"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_chu" 
                
                
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_cheng"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_cheng"
                
                
       android:layout_marginRight="5dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <Button
                android:id="@+id/btn_7"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_7" 
               
                 android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_8"
               
                 
       android:layout_marginRight="5dp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_9" 
               
                
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_jian"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_jian" 
             
                 
       android:layout_marginRight="5dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <Button
                android:id="@+id/btn_4"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_4" 
             
                 android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_5" 
              
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_6" 
             
       android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_jia"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:text="@string/btn_jia" 
               
       android:layout_marginRight="5dp"/>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp" >

        <Button
            android:id="@+id/btn_1"
            android:layout_width="65sp"
            android:layout_height="60sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_1" 
          
              android:layout_marginLeft="3dp"
       android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="67sp"
            android:layout_height="60sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_1"
            android:text="@string/btn_2" 
        
            
       android:layout_marginRight="6dp"
        android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="61sp"
            android:layout_height="60sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_2"
            android:text="@string/btn_3" 
           
            
       android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="69sp"
            android:layout_height="130sp"
            android:layout_toRightOf="@+id/btn_3"
            android:text="@string/btn_equal"
            
          
       android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_kuahao"
            android:layout_width="69sp"
            android:layout_height="60sp"
            android:layout_below="@+id/btn_2"
            android:layout_toLeftOf="@+id/btn_2"
            android:text="@string/btn_kuahao"
           
            android:layout_marginLeft="3dp"
       android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_0"
            android:layout_width="67sp"
            android:layout_height="60sp"
            android:layout_below="@+id/btn_2"
            android:layout_toRightOf="@+id/btn_kuahao"
            android:text="@string/btn_0" 
          
        
       android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btn_point"
            android:layout_width="61sp"
            android:layout_height="60sp"
            android:layout_alignBaseline="@+id/btn_0"
            android:layout_alignBottom="@+id/btn_0"
            android:layout_alignLeft="@+id/btn_3"
          
            android:text="@string/btn_point" />

    </RelativeLayout>

</LinearLayout>